The layout is not updated when style.contain is changed from "size"/"inline-size" to empty string https://bugs.webkit.org/show_bug.cgi?id=239489

Reviewed by Rob Buis.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-contain/contain-inline-size-removed-expected.html: Added.
* web-platform-tests/css/css-contain/contain-inline-size-removed.html: Added.
* web-platform-tests/css/css-contain/contain-size-removed-expected.html: Added.
* web-platform-tests/css/css-contain/contain-size-removed.html: Added.
* web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-004-expected.txt:
* web-platform-tests/css/css-sizing/contain-intrinsic-size/auto-005-expected.txt:

Source/WebCore:

Unlike "layout", "paint" and "style" containment, being a "size" and "inline-size" containment or not affects the layout size of the element.
So it should require layout when a normal element becomes a "size"/"inline-size" containment, vice versa.

Tests: imported/w3c/web-platform-tests/css/css-contain/contain-inline-size-removed.html
       imported/w3c/web-platform-tests/css/css-contain/contain-size-removed.html

* rendering/style/RenderStyle.cpp:
(WebCore::rareNonInheritedDataChangeRequiresLayout):
(WebCore::RenderStyle::effectiveContainment const): Deleted. Moved to StyleRareNonInheritedData.
* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::effectiveContainment const):
* rendering/style/StyleRareNonInheritedData.cpp:
(WebCore::StyleRareNonInheritedData::effectiveContainment const):
* rendering/style/StyleRareNonInheritedData.h:

Canonical link: https://commits.webkit.org/249913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293288 268f45cc-cd09-0410-ab3c-d52691b4dbfc